# felis

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  gen_compile_commands.sh  gen_compile_commands_json.sh
felis/check/: check.cc  check.h  decl.cc  decl.h  hir.h  type.h
felis/ir/: builder.cc  builder.h
felis/printer/: printer.cc
felis/string/: string.cc  string.h
felis/syntax/: ast.h  lexer.cc  lexer.h  parser.cc  parser.h  rune.h  token.cc
felisc/: CMakeLists.txt  args.h  main.cc  main.cpp  opts.h
include/llvm-9/llvm/Config/: llvm-config.h
include/llvm-9/llvm/Support/: ARMTargetParser.def
ir/: builder.h  symtab.h  type.h
sample/: a.felis  b.felis  c.felis  d.felis  e.felis  link.sh
src/: CMakeLists.txt  loc.h  macro.h  main.cpp  ptr.h  unique.h
src/analysis/: def_table.cc  def_table.h  ty_inferer.cc  ty_inferer.h
src/backend/: llvm_builder.cc  llvm_builder.h  target.cc  target.h
src/builder/: builder.cc  builder.h  target.cc  target.h
src/check/: check.cc  check.h  constant.h  ctx.h  decl.cc  decl.h  decl_checker.cc  decl_checker.h  eval.h  hir.cc  hir.h  low.cc  low.h  lower.cc  lower.h  mir_builder.cc  mir_builder.h  node_map.h  parse.cc  parse.h  scope.h  stmt_result.h  ty.cc  ty.h  ty_infer.cc  ty_infer.h  ty_resolver.h  type.cc  type.h  type_checker.cc  type_checker.h  type_maps.h
src/codegen/: codegen.cc  codegen.h
src/common/: CMakeLists.txt  error.cpp  error.hpp  pos.hpp  source.hpp
src/err/: error.h  handler.h  result.h
src/error/: error.h  handler.cc  handler.h
src/internal/: felis_lib.felis  felis_lib.h
src/ir/: builder.cc  builder.h
src/middle/: lower.cc  lower.h  mir_builder.cc  mir_builder.h
src/node/: ast.cc  ast.h  hir.cc  hir.h  mir.h  node.h
src/parse/: CMakeLists.txt  Makefile  ast.hpp  error.hpp  lexer.cpp  lexer.hpp  lexer.ll  loc.hpp  parse.hpp  parser.cpp  parser.hpp  pos.hpp  printer.cpp  printer.hpp  rune.cpp  source.cpp  source.hpp  token.cpp  token.hpp
src/printer/: ast_printer.cc  ast_printer.h  hir_printer.cc  hir_printer.h  mir_printer.cc  mir_printer.h  printer.cc  printer.h
src/string/: string.cc  string.h
src/syntax/: ast.h  ast.hpp  lexer.cc  lexer.cpp  lexer.h  lexer.hpp  parser.cc  parser.cpp  parser.h  parser.hpp  pos.h  printer.cc  printer.cpp  printer.h  printer.hpp  rune.cc  rune.cpp  rune.h  rune.hpp  syntax.h  syntax.hpp  token.cc  token.cpp  token.h  token.hpp
test/: CMakeLists.txt
test/parse/: lexer_test.cc  lexer_test.cpp
